test/visibility/import/withUse/useImportSubmodule-noOuterNameForImport.good
useImportSubmodule-noOuterNameForImport.chpl:3: error: Cannot import module 'N'
useImportSubmodule-noOuterNameForImport.chpl:5: note: a module named 'N' is defined here
useImportSubmodule-noOuterNameForImport.chpl:3: note: full path or explicit relative import required
useImportSubmodule-noOuterNameForImport.chpl:3: note: please specify the full path to the module
useImportSubmodule-noOuterNameForImport.chpl:3: note: or use a relative import e.g. 'import this.M' or 'import super.M'
